--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,10 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/bot.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "env": {
+                "PYTHONPATH": "${workspaceRoot}\\venv\\Scripts\\python"
+            }
         },
     ]
 }
