--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,27 @@
 # You can add other services your application may depend on here, such as a
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
+version: '3.8'
 services:
-  discord_bot:
-    build:
-      context: .
+  discordbot:
+    build: .
+    container_name: discordpy-bot
+    restart: unless-stopped
+    environment:
+      - PYTHONUNBUFFERED=1
+      # Add your Discord bot token here or use a .env file
+      # - DISCORD_TOKEN=your_token_here
+    volumes:
+      - .:/app
+    # Uncomment if you want to pass a .env file
+    # env_file:
+    #   - .env
+    # If you want to expose ports (for webhooks, etc), add:
+    # ports:
+    #   - "8080:8080"
+    # If you want to limit resources:
+    # deploy:
+    #   resources:
+    #     limits:
+    #       cpus: '0.50'
+    #       memory: 512M
