Add task to run Pytest in VSCode configuration

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,6 +30,16 @@
         "reveal": "always"
       },
       "problemMatcher": []
+    },
+    {
+      "label": "Run Pytest",
+      "type": "shell",
+      "command": "venv\\Scripts\\pytest",
+      "group": "test",
+      "presentation": {
+        "reveal": "always"
+      },
+      "problemMatcher": []
     }
   ]
 }
