--- a/.github/workflows/push-to-live.yml
+++ b/.github/workflows/push-to-live.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   run-script:
     runs-on: ubuntu-latest  # local-runner for local, ubuntu-latest for GitHub repo
+    environment: live
 
     steps:
       - name: Checkout repository
