--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-discord.py[voice] @ git+https://github.com/rapptz/discord.py
+discord.py[voice]
 python-dotenv==1.1.1
-yt-dlp==2025.7.21
+yt-dlp
 dotenv==0.9.9
