Change DISCORD_API_TOKEN environment variable

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
     build: .
     container_name: discordpy-bot
     environment:
-      - DISCORD_API_TOKEN=${DISCORD_TOKEN}
+      - DISCORD_API_TOKEN=${DISCORD_SECRET}
       - YOUTUBE_COOKIES=${YOUTUBE_COOKIES}
     restart: unless-stopped
     command: python bot.py
