--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,6 +19,8 @@ jobs:
         run: |  
           python -m pip install --upgrade pip  
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi  
+      - name: Install coverage
+        run: pip install coverage
       - name: Lint with Ruff  
         run: |  
           pip install ruff  
