Refactor GitHub Actions workflow to consolidate testing dependencies installation

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -19,16 +19,12 @@ jobs:
         run: |  
           python -m pip install --upgrade pip  
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi  
-      - name: Install coverage
-        run: pip install coverage
+      - name: Install testing dependencies
+        run: pip install coverage pytest ruff
       - name: Lint with Ruff  
-        run: |  
-          pip install ruff  
-          ruff --format=github --target-version=py310 .  
+        run: ruff --format=github --target-version=py310 .  
         continue-on-error: true  
       - name: Test with pytest  
-        run: |  
-          coverage run -m pytest  -v -s
+        run: coverage run -m pytest  -v -s
       - name: Generate Coverage Report  
-        run: |  
-          coverage report -m
+        run: coverage report -m
